# prosoft-c-stack

./: CMakeLists.txt  cstack.c  test.cpp
.github/workflows/: cmake-single-platform.yml
